--- a/app/assets/stylesheets/products/new.scss
+++ b/app/assets/stylesheets/products/new.scss
@@ -587,68 +587,163 @@
 
 }
 
-.imsge_send_crip{
+// .imsge_send_crip{
   
-}
+// }
 
-.item-image{
-  float: left;
-}
+// .item-image{
+//   float: left;
+// }
 
-#image-box-1{
-  height: 180px;
-  background-color: green;
-  margin-left: auto; 
-  text-align: center;
-  line-height: 180px;
-  float: right;
+// #image-box-1{
+//   height: 180px;
+//   background-color: green;
+//   margin-left: auto; 
+//   text-align: center;
+//   line-height: 180px;
+//   float: right;
   
 
-  .data{
-    height: 100%;
+//   .data{
+//     height: 100%;
   
-    #image-box__container{
-      height: 100%;
-      width: 100%;
-      .input-area{
-        height: 100%;
+//     #image-box__container{
+//       height: 100%;
+//       width: 100%;
+//       .input-area{
+//         height: 100%;
+//       }
+//     }
+//   }
+// }
+
+// .item-num-0{
+//   width: 620px;
+// }
+// .item-num-1{
+//   width: 491px;
+// }
+// .item-num-2{
+//   width: 363px;
+// }
+// .item-num-3{
+//   width: 234px;
+// }
+// .item-num-4{
+//   width: 106px;
+// }
+// //下段のfile_field
+// .item-num-5{
+//   width: 100%;
+// }
+// .item-num-6{
+//   width: 491px;
+// }
+// .item-num-7{
+//   width: 363px;
+// }
+// .item-num-8{
+//   width: 234px;
+// }
+// .item-num-9{
+//   width: 106px;
+// }
+
+// .item-image__operetion--delete{
+//   float: right;
+// }
+
+.post__drop__box__container{
+  display: block;
+  margin: 16px auto 0;
+  display: flex;
+  flex-wrap: wrap;
+
+  //プレビュー表示欄のCSS
+  .prev-content {
+    display: flex;
+    .preview-box {
+      height: 162px;
+      width: 112px;
+      margin: 0 15px 10px 0;
+      .upper-box {
+        height: 112px;
+        width: 100%;
+        img{
+          width: 112px;
+          height: 112px;
+        }
       }
+      .lower-box {
+        display: flex;
+        text-align: center;
+        .update-box {
+          color: #00b0ff;
+          width: 50%;
+          height: 50px;
+          line-height: 50px;
+          border: 1px solid #eee;
+          background: #f5f5f5;
+          cursor: pointer;
+        }
+        .delete-box {
+          color: #00b0ff;
+          width: 50%;
+          height: 50px;
+          line-height: 50px;
+          border: 1px solid #eee;
+          background: #f5f5f5;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+  //投稿クリックエリアのCSS
+  .label-content{
+    margin-bottom: 10px;
+    width: 620px;
+    .label-box {
+      display: block;
+      border: 1px dashed #ccc;
+      position: relative;
+      background: #f5f5f5;
+      width: 100%;
+      height: 162px;
+      cursor: pointer;
+      &__text-visible {
+        position: absolute;
+        top: 50%;
+        left: 16px;
+        right: 16px;
+        text-align: center;
+        font-size: 14px;
+        line-height: 1.5;
+        font-weight: bold;
+        // -webkit-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+        pointer-events: none;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
+    }
+  }
+
+  //file_fieldのcss
+  .hidden-content {
+    .hidden-field {
+      display: none;
+    }
+    .hidden-checkbox {
+      display: none;
     }
   }
 }
 
-.item-num-0{
-  width: 620px;
-}
-.item-num-1{
-  width: 491px;
-}
-.item-num-2{
-  width: 363px;
-}
-.item-num-3{
-  width: 234px;
-}
-.item-num-4{
-  width: 106px;
-}
-//下段のfile_field
-.item-num-5{
+.listing-select-wrapper__box--select{
   width: 100%;
-}
-.item-num-6{
-  width: 491px;
-}
-.item-num-7{
-  width: 363px;
-}
-.item-num-8{
-  width: 234px;
-}
-.item-num-9{
-  width: 106px;
-}
-
-.item-image__operetion--delete{
-  float: right;
+  height: 50px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: white;
 }
