--- a/app/assets/stylesheets/products/show.scss
+++ b/app/assets/stylesheets/products/show.scss
@@ -27,21 +27,26 @@
         justify-content: space-between;
 
         &_pic{
-          width: 49%;
+          width: 50%;
           height: 100%;
           background-color:#f7f3f3;
+          .detail{
 
-          .sales_pic{
-            width: 100%;
-            height: 280px;
-            vertical-align: bottom;
+            .sales_pic{
+              width: 100%;
+              height: 280px;
+              vertical-align: bottom;
+            }
           }
-          .sales_pic_smoll{
-            width: 20%;
-            height: 68px;
-            float: left;
-	          display: block;
+          .list{
+            .sales_pic_smoll{
+              width: 20%;
+              height: 68px;
+              float: left;
+              display: block;
+            }
           }
+
           
         }
         &_item{
@@ -364,7 +369,6 @@
 
         .title{
           padding: 8%;
-          vertical-align: middle;
           word-wrap: break-word;
           font-size: 16px;
           height: 58px;
