--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -45,3 +45,5 @@
               =link_to "新規会員登録", new_user_path, class: 'new_user'
             %li.bottme_menu
               =link_to "ログイン", user_session_path, class: 'log_in'
+
+= render partial: "products/producte"
