--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -31,16 +31,17 @@
     %h2.new_item_title レディース新着アイテム
     %li.more_item
       =link_to "もっと見る >" , "#"
-  .new_list
-    %ul.new_list_item
-      - @ladys.each do |lady|
-        %li.item
-          =link_to product_path(lady.id) ,class: "new_item" do
-            .item_text 
-              =lady.name
-            = image_tag lady.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price",id:"text_price"} 
-              =price_split(lady.price)
+  - if @ladys.present?
+    .new_list
+      %ul.new_list_item
+        - @ladys.each do |lady|
+          %li.item
+            =link_to product_path(lady.id) ,class: "new_item" do
+              .item_text 
+                =lady.name
+              = image_tag lady.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
+              %span{href:  "#",class: "price",id:"text_price"} 
+                =price_split(lady.price)
 
  
 
@@ -50,16 +51,17 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  .new_list
-    %ul.new_list_item
-      - @mens.each do |men|
-        %li.item
-          =link_to product_path(men.id) ,class: "new_item" do
-            .item_text 
-              =men.name
-            = image_tag men.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price",id:"text_price"} 
-              =price_split(men.price)
+  - if @mens.present?
+    .new_list
+      %ul.new_list_item
+        - @mens.each do |men|
+          %li.item
+            =link_to product_path(men.id) ,class: "new_item" do
+              .item_text 
+                =men.name
+              = image_tag men.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
+              %span{href:  "#",class: "price",id:"text_price"} 
+                =price_split(men.price)
 
 
  
@@ -70,16 +72,17 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  .new_list
-    %ul.new_list_item
-      - @appliances.each do |appliance|
-        %li.item
-          =link_to product_path(appliance.id) ,class: "new_item" do
-            .item_text 
-              =appliance.name
-            = image_tag appliance.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price",id:"text_price"} 
-              =price_split(appliance.price)
+  - if @appliances.present?
+    .new_list
+      %ul.new_list_item
+        - @appliances.each do |appliance|
+          %li.item
+            =link_to product_path(appliance.id) ,class: "new_item" do
+              .item_text 
+                =appliance.name
+              = image_tag appliance.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
+              %span{href:  "#",class: "price",id:"text_price"} 
+                =price_split(appliance.price)
 
 
  
@@ -90,16 +93,17 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  .new_list
-    %ul.new_list_item
-      - @toys.each do |toy|
-        %li.item
-          =link_to product_path(toy.id) ,class: "new_item" do
-            .item_text 
-              =toy.name
-            = image_tag toy.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price",id:"text_price"} 
-              =price_split(toy.price)
+  - if @toys.present?
+    .new_list
+      %ul.new_list_item
+        - @toys.each do |toy|
+          %li.item
+            =link_to product_path(toy.id) ,class: "new_item" do
+              .item_text 
+                =toy.name
+              = image_tag toy.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
+              %span{href:  "#",class: "price",id:"text_price"} 
+                =price_split(toy.price)
 
 
 
@@ -119,16 +123,17 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  .new_list
-    %ul.new_list_item
-      - @chanels.each do |chanel|
-        %li.item
-          =link_to product_path(chanel.id) ,class: "new_item" do
-            .item_text 
-              =chanel.name
-            = image_tag chanel.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price",id:"text_price"} 
-              =price_split(chanel.price)
+  - if @channels.present?
+    .new_list
+      %ul.new_list_item
+        - @chanels.each do |chanel|
+          %li.item
+            =link_to product_path(chanel.id) ,class: "new_item" do
+              .item_text 
+                =chanel.name
+              = image_tag chanel.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
+              %span{href:  "#",class: "price",id:"text_price"} 
+                =price_split(chanel.price)
 
  
 
@@ -138,16 +143,17 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  .new_list
-    %ul.new_list_item
-      - @coachs.each do |coach|
-        %li.item
-          =link_to product_path(coach.id) ,class: "new_item" do
-            .item_text 
-              =coach.name
-            = image_tag coach.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price",id:"text_price"} 
-              =price_split(coach.price)
+  - if @coachs.present?
+    .new_list
+      %ul.new_list_item
+        - @coachs.each do |coach|
+          %li.item
+            =link_to product_path(coach.id) ,class: "new_item" do
+              .item_text 
+                =coach.name
+              = image_tag coach.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
+              %span{href:  "#",class: "price",id:"text_price"} 
+                =price_split(coach.price)
 
  
 
@@ -157,16 +163,17 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  .new_list
-    %ul.new_list_item
-      - @louisvuittons.each do |louisvuitton|
-        %li.item
-          =link_to product_path(louisvuitton.id) ,class: "new_item" do
-            .item_text 
-              =louisvuitton.name
-            = image_tag louisvuitton.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price",id:"text_price"} 
-              =price_split(louisvuitton.price)
+  - if @louisvuittons.present?
+    .new_list
+      %ul.new_list_item
+        - @louisvuittons.each do |louisvuitton|
+          %li.item
+            =link_to product_path(louisvuitton.id) ,class: "new_item" do
+              .item_text 
+                =louisvuitton.name
+              = image_tag louisvuitton.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
+              %span{href:  "#",class: "price",id:"text_price"} 
+                =price_split(louisvuitton.price)
 
 
  
@@ -177,16 +184,17 @@
     %li.more_item
       =link_to "#" do
         もっと見る >
-  .new_list
-    %ul.new_list_item
-      - @guccis.each do |gucci|
-        %li.item
-          =link_to product_path(gucci.id) ,class: "new_item" do
-            .item_text 
-              =gucci.name
-            = image_tag gucci.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
-            %span{href:  "#",class: "price",id:"text_price"} 
-              =price_split(gucci.price)
+  - if @guccis.present?
+    .new_list
+      %ul.new_list_item
+        - @guccis.each do |gucci|
+          %li.item
+            =link_to product_path(gucci.id) ,class: "new_item" do
+              .item_text 
+                =gucci.name
+              = image_tag gucci.photos.first.image.to_s,class: "item_pic", alt: "販売写真"
+              %span{href:  "#",class: "price",id:"text_price"} 
+                =price_split(gucci.price)
 
 
 
