--- a/app/assets/stylesheets/products/new.scss
+++ b/app/assets/stylesheets/products/new.scss
@@ -675,3 +675,16 @@
   -moz-appearance: none;
   background-color: white;
 }
+
+
+#keyup1{
+  float: right;
+  font-size: 20px;
+}
+
+
+
+#keyup2{
+  float: right;
+  font-size: 30px;
+}
