--- a/app/assets/stylesheets/products/show.scss
+++ b/app/assets/stylesheets/products/show.scss
@@ -31,7 +31,8 @@
           height: 100%;
           background-color:#f7f3f3;
           .detail{
-
+            display: flex;
+            overflow: hidden;
             .sales_pic{
               width: 100%;
               height: 280px;
