--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -64,8 +64,8 @@
                   
                   .listing-select-wrapper
                     .listing-select-wrapper__box
-                      = form.select :category_id, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
-                    
+                      = form.select :category_id, options_for_select(@category_parent_array.map{|c|c},@product.category_id_before_type_cast), {}, {class: "listing-select-wrapper__box--select", id: "parent_category"}
+                      -# = form.select :category_id,@category_parent_array.map{|c|[c]},), {}, {class: "listing-select-wrapper__box--select", id: "parent_category"}
                 .exhibition_main__container__product__detail__inner__select__status#margin_select
                   %h3.exhibition_main__container__product__detail__inner__select__status__left
                     サイズ
@@ -74,9 +74,7 @@
                 .exhibition_main__container__product__detail__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :size, Product.sizes, {prompt: "---"}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
-
-
+                  = form.select :size, options_for_select(Product.sizes.map{|c|c} , @product.size_before_type_cast), {}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
 
                 .exhibition_main__container__product__detail__inner__select__status
                   %h3.exhibition_main__container__product__detail__inner__select__status__left
@@ -86,9 +84,8 @@
                 .exhibition_main__container__product__detail__inner__select__wrappe
                   
                     
-                  = form.select :brand_id, [["シャネル", 1]], {prompt: "---"}, class: "exhibition_main__container__product__detail__inner__select__wrappe__button"
-
-
+                  -# = form.select :brand_id, options_for_select(Brand.all.map{|c|[c[:name], c[:id]]} ,@product.brand.id), {}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
+                  = form.select :brand_id, options_for_select(Brand.pluck(:name, :id), @product.brand.id), {}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
                 .exhibition_main__container__product__detail__inner__select__status
                   %h3.exhibition_main__container__product__detail__inner__select__status__left
                     商品の状態
@@ -97,7 +94,7 @@
                 .exhibition_main__container__product__detail__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :condition, Product.conditions, {prompt: "---"}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
+                  = form.select :condition, options_for_select(Product.conditions.map{|c|c} , @product.condition_before_type_cast), {}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
                     
                 
                 
@@ -116,7 +113,7 @@
                 .exhibition_main__container__product__shipping_method__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :shipping_charge, Product.shipping_charges, {prompt: "---"}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
+                  = form.select :shipping_charge, options_for_select(Product.shipping_charges.map{|c|c},@product.shipping_charge_before_type_cast), {}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
                 
 
                 .exhibition_main__container__product__shipping_method__inner__select__burden
@@ -127,7 +124,7 @@
                 .exhibition_main__container__product__shipping_method__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :shipping_method, Product.shipping_methods, {prompt: "---"}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
+                  = form.select :shipping_method, options_for_select(Product.shipping_methods.map{|c|c},@product.shipping_method_before_type_cast), {}, {class: "exhibition_main__container__product__detail__inner__select__wrappe__button"}
 
 
 
@@ -139,7 +136,7 @@
                 .exhibition_main__container__product__shipping_method__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :shipping_prefecture, Address.prefectures, {prompt: "---"}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
+                  = form.select :shipping_prefecture, options_for_select(Address.prefectures.map{|c|c},@product.shipping_prefecture_before_type_cast), {}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
                     
 
 
@@ -151,7 +148,7 @@
                 .exhibition_main__container__product__shipping_method__inner__select__wrappe
                   %i.fa.fa-chevron-down
                     
-                  = form.select :shipping_days, Product.shipping_days, {prompt: "---"}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
+                  = form.select :shipping_days, options_for_select(Product.shipping_days.map{|c|c},@product.shipping_days_before_type_cast), {}, {class: "exhibition_main__container__product__shipping_method__inner__select__wrappe__button"}
                     
 
           .exhibition_main__container__product__money
@@ -190,7 +187,7 @@
                 加盟店規約
               に同意したことになります。
 
-            = form.submit "出品する", class: "exhibition_main__container__product__discription__exhibition"
+            = form.submit "変更する", class: "exhibition_main__container__product__discription__exhibition"
             = link_to "/" do
               .exhibition_main__container__product__discription__back
                 もどる
@@ -211,3 +208,5 @@
           = image_tag "logo_gray.svg", size: "80x65", alt: "logo", class: "image_under"
       .exhibition_footer__inner__inc
         © Mercari, Inc.
+
+
